# gallium

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  analysis_options.yaml  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/decisions/: 0001-initial-architecture.md
installer/: .gitignore  CMakeLists.txt  analysis_options.yaml  main.cc  pubspec.yaml  resource.h  resource.rc
installer/lib/: main.dart
installer/windows/: CMakeLists.txt
installer/windows/runner/: Runner.rc  main.cpp
lib/: main.dart
lib/features/editor/: editor_page.dart  editor_state.dart
lib/features/file_tree/: file_node.dart  file_tree_service.dart  file_tree_widget.dart  files_page.dart
lib/features/search/: search_page.dart  search_service.dart
lib/features/settings/: settings_page.dart  settings_service.dart
lib/ui/theme/: app_theme.dart  highlight_theme.dart
lib/ui/widgets/: app_title_bar.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
